--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="FreeJobID - Employment Opportunities for All, Anywhere, Anytime.">
+    <meta name="keywords" content="jobs, employment, opportunities, careers, apply online, lowongan kerja, pekerjaan, karir, loker terbaru, loker 2024, kerja online, situs lowongan kerja, portal kerja, rekrutmen, pencari kerja, info lowongan kerja, karir terbaik, pekerjaan freelance, pekerjaan tetap, peluang karir, lowongan full time, lowongan part time, job vacancy, job portal, apply job, cari kerja, lamaran kerja, kerja remote, pekerjaan jarak jauh, karir di perusahaan besar, lowongan fresh graduate, lowongan berpengalaman, job seeker, job search, job application, job listings, career opportunities, job openings, kerja di Indonesia, job opportunities in Indonesia, rekrutmen online, situs karir, situs pencari kerja, bursa kerja, lowongan kerja terbaru, pekerjaan idaman, lowongan kerja profesional, lowongan kerja untuk lulusan baru, lowongan kerja teknisi, lowongan kerja administrasi, lowongan kerja manajemen, lowongan kerja sales, lowongan kerja marketing, lowongan kerja IT, lowongan kerja HRD, lowongan kerja finance, lowongan kerja accounting, lowongan kerja engineering, lowongan kerja supervisor, lowongan kerja manager">
+    <meta name="author" content="Ary Wibowo">
     <title>FreeJobID - Employment Opportunities for All, Anywhere, Anytime</title>
     <link rel="stylesheet" href="css/styles.css">
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZMHZWN4DWD"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-ZMHZWN4DWD');
+    </script>
 </head>
 <body>
     <div class="container">
@@ -19,7 +31,7 @@
                 <p>To apply, please click the button below.</p>
                 <a href="#" class="apply-button">Apply Now</a>
             </div>
-            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTs8w0L01fymu6CLyrFSoWiVOX1vH9SxwW4d23aBIh5kPbDHbZGUFWqPgm5Jy1NfRCKc-8M3ugg-aPJ/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT7o8hvPqNcmE8_6oG7pTzBR1p9-dxk1GGVYB5NOs7iN5V_K0H3gXNmFTz5jlv6eht6bFQ47_Ncgg8w/pubhtml?widget=true&amp;headers=false"></iframe>
         </div>
     </div>
     <script src="js/script.js"></script>
