--- a/index.html
+++ b/index.html
@@ -20,19 +20,21 @@
     </script>
 </head>
 <body>
+    <div class="header">
+        <img src="images/Logo-FreeJobID.png" alt="FreeJobID Logo" id="logo">
+        <h1 id="title">FreeJobID - Employment Opportunities for All, Anywhere, Anytime</h1>
+    </div>
     <div class="container">
-        <div class="header">
-            <img src="images/Logo-FreeJobID.png" alt="FreeJobID Logo">
-            <h1>FreeJobID - Employment Opportunities for All, Anywhere, Anytime</h1>
-        </div>
         <div class="content">
-            <div class="text">
+            <div class="job-openings">
                 <h2>JOB OPENINGS</h2>
                 <p>Please review the job details listed in the table.</p>
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT7o8hvPqNcmE8_6oG7pTzBR1p9-dxk1GGVYB5NOs7iN5V_K0H3gXNmFTz5jlv6eht6bFQ47_Ncgg8w/pubhtml?widget=true&amp;headers=false"></iframe>
+            </div>
+            <div class="apply">
                 <p>To apply, please click the button below.</p>
                 <a href="#" class="apply-button">Apply Now</a>
             </div>
-            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQyDmwEoAhnUUvUPDuzeIe7o_fr9lz8Lwv_GqFAs48NXZjugfpTrP_nGgBviM3oBIGEKnGk9ukVe1Fr/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
         </div>
     </div>
     <script src="js/script.js"></script>
