Update index.html --> bilingual rev1

--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
             </div>
         </div>
     </div>
-    <script src="js/script.js"></script>
+    <script>
+        function setLanguage(language) {
+            var elements = document.querySelectorAll('[data-en]');
+            elements.forEach(function (element) {
+                if (language === 'en') {
+                    element.textContent = element.getAttribute('data-en');
+                } else if (language === 'id') {
+                    element.textContent = element.getAttribute('data-id');
+                }
+            });
+        }
+    </script>
 </body>
 </html>
