--- a/jobs/sales-motoris.html
+++ b/jobs/sales-motoris.html
@@ -81,7 +81,7 @@
             <p>Send your CV or portfolio to PIC: Nadya Marissa Alexandra via <a href="https://bit.ly/gabungBENtalentcenter">this link</a>.</p>
             <img src="https://www.gos.co.id/logo.jpg" alt="We are hiring" width="200">
         </div>
-        <a href="https://imheroeskiller.github.io/FreeJobID/" class="back-button">Back to Home</a>
+        <a href="https://imheroeskiller.github.io/FreeJobID/index.html" class="back-button">Back to Home</a>
     </div>
     <script>
         function switchLang(lang) {
