--- a/jobs/sales-motoris.html
+++ b/jobs/sales-motoris.html
@@ -31,7 +31,7 @@
         </div>
         <div id="content-id">
             <h1>Lowongan Kerja Sales Motoris</h1>
-            <img src="path_to_flyer_image.jpg" alt="Flyer Lowongan Sales Motoris">
+            <img src="/images/sales-motoris.jpeg" alt="Flyer Lowongan Sales Motoris">
             <h2>Sales Motoris</h2>
             <p>Kami mencari Sales Motoris yang memiliki pengalaman sebagai sales, terbiasa dengan target, dan memiliki sepeda motor sendiri.</p>
             <h3>Kualifikasi:</h3>
@@ -79,7 +79,7 @@
                 <li>BPJS Employment & Health</li>
             </ul>
             <p>Send your CV or portfolio to PIC: Nadya Marissa Alexandra via <a href="https://bit.ly/gabungBENtalentcenter">this link</a>.</p>
-            <img src="https://www.gos.co.id/logo.jpg" alt="We are hiring" width="200">
+            <img src="/images/sales-motoris.jpeg" alt="We are hiring" width="200">
         </div>
         <a href="https://imheroeskiller.github.io/FreeJobID/index.html" class="back-button">Back to Home</a>
     </div>
