--- a/jobs/sales-motoris.html
+++ b/jobs/sales-motoris.html
@@ -31,7 +31,7 @@
         </div>
         <div id="content-id">
             <h1>Lowongan Kerja Sales Motoris</h1>
-            <img src="jobs/images/sales-motoris.jpeg" alt="Flyer Lowongan Sales Motoris">
+            <img src="https://freejobid.arywibowo.id/jobs/images/sales-motoris.jpeg" alt="Flyer Lowongan Sales Motoris">
             <h2>Sales Motoris</h2>
             <p>Kami mencari Sales Motoris yang memiliki pengalaman sebagai sales, terbiasa dengan target, dan memiliki sepeda motor sendiri.</p>
             <h3>Kualifikasi:</h3>
@@ -57,7 +57,7 @@
         </div>
         <div id="content-en" style="display:none;">
             <h1>Job Vacancy Sales Motoris</h1>
-            <img src="jobs/images/gos.png" alt="Flyer Job Vacancy Sales Motoris">
+            <img src="https://freejobid.arywibowo.id/jobs/images/gos.png" alt="Flyer Job Vacancy Sales Motoris">
             <h2>Sales Motoris</h2>
             <p>We are looking for a Sales Motoris with experience, accustomed to targets, and own a motorcycle.</p>
             <h3>Qualifications:</h3>
@@ -79,7 +79,7 @@
                 <li>BPJS Employment & Health</li>
             </ul>
             <p>Send your CV or portfolio to PIC: Nadya Marissa Alexandra via <a href="https://bit.ly/gabungBENtalentcenter">this link</a>.</p>
-            <img src="jobs/images/gos.png" alt="We are hiring" width="200">
+            <img src="https://freejobid.arywibowo.id/jobs/images/gos.png" alt="We are hiring" width="200">
         </div>
         <a href="https://imheroeskiller.github.io/FreeJobID/index.html" class="back-button">Back to Home</a>
     </div>
