Update index.html --> footer

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="job-openings">
                 <h2 data-en="JOB OPENINGS" data-id="LOWONGAN KERJA">JOB OPENINGS</h2>
                 <p data-en="Please review the job details listed in the table." data-id="Silakan tinjau detail pekerjaan yang terdaftar di tabel.">Please review the job details listed in the table.</p>
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQyDmwEoAhnUUvUPDuzeIe7o_fr9lz8Lwv_GqFAs48NXZjugfpTrP_nGgBviM3oBIGEKnGk9ukVe1Fr/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT7o8hvPqNcmE8_6oG7pTzBR1p9-dxk1GGVYB5NOs7iN5V_K0H3gXNmFTz5jlv6eht6bFQ47_Ncgg8w/pubhtml?widget=true&amp;headers=false"></iframe>
             </div>
             <div class="apply">
                 <p data-en="To apply, please click the button below." data-id="Untuk melamar, silakan klik tombol di bawah ini.">To apply, please click the button below.</p>
@@ -41,6 +41,17 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2024 FreeJobID. All rights reserved.</p>
+            <p>Follow us on:
+                <a href="https://www.facebook.com" target="_blank">Facebook</a> |
+                <a href="https://www.twitter.com" target="_blank">Twitter</a> |
+                <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+            </p>
+            <p>Contact us at: <a href="mailto:info@freejobid.com">info@freejobid.com</a></p>
+        </div>
+    </footer>
     <script>
         function setLanguage(language) {
             var elements = document.querySelectorAll('[data-en]');
