--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="apply">
                 <p data-en="To apply, please click the button below." data-id="Untuk melamar, silakan klik tombol di bawah ini.">To apply, please click the button below.</p>
-                <a href="#" class="apply-button" data-en="Apply Now" data-id="Lamar Sekarang">Apply Now</a>
+                <a href="https://freejobid.arywibowo.id/apply" class="apply-button" data-en="Apply Now" data-id="Apply Sekarang">Apply Now</a>
             </div>
         </div>
     </div>
