--- a/jobs/sales-merchandiser.html
+++ b/jobs/sales-merchandiser.html
@@ -52,7 +52,7 @@
                 <li>Allowance</li>
                 <li>BPJS Ketenagakerjaan & Kesehatan</li>
             </ul>
-            <p>Kirim CV atau portofolio ke PIC: Nadya Marissa Alexandra melalui <a href="https://imheroeskiller.github.io/FreeJobID/apply">link ini</a>.</p>
+            <p>Kirim CV atau portofolio melalui <a href="https://imheroeskiller.github.io/FreeJobID/apply">link ini</a>.</p>
             <img src="https://imheroeskiller.github.io/FreeJobID/jobs/images/GOS.png" alt="We are hiring" width="200">
         </div>
         <div id="content-en" style="display:none;">
@@ -78,7 +78,7 @@
                 <li>Allowance</li>
                 <li>BPJS Employment & Health</li>
             </ul>
-            <p>Send your CV or portfolio to PIC: Nadya Marissa Alexandra via <a href="https://imheroeskiller.github.io/FreeJobID/apply">this link</a>.</p>
+            <p>Send your CV or portfolio to <a href="https://imheroeskiller.github.io/FreeJobID/apply">this link</a>.</p>
             <img src="https://imheroeskiller.github.io/FreeJobID/jobs/images/GOS.png" alt="We are hiring" width="200">
         </div>
         <a href="https://imheroeskiller.github.io/FreeJobID" class="back-button">Back to Home</a>
