--- a/index.html
+++ b/index.html
@@ -77,12 +77,8 @@
     </div>
     <footer>
         <div class="footer-content">
-            <p>&copy; 2024 FreeJobID. All rights reserved.</p>
-            <p>Follow us on:
-                <a href="https://www.facebook.com" target="_blank">Facebook</a> |
-                <a href="https://www.twitter.com" target="_blank">Twitter</a> |
-                <a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
-            </p>
+            <p>&copy; 2024 FreeJobID. All rights reserved. Owned by <a href="https://arywibowo.id" target="_blank">Ary Wibowo</a>.</p>
+            <p>Follow us on: <a href="https://www.linkedin.com/in/boworesearch/" target="_blank">LinkedIn</a></p>
             <p>Contact us at: <a href="mailto:info@freejobid.com">info@freejobid.com</a></p>
         </div>
     </footer>
