--- a/privacy.html
+++ b/privacy.html
@@ -8,17 +8,17 @@
     <meta name="author" content="Ary Wibowo">
     <title>FreeJobID - Privacy Policy & Legal Information</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/privacy.css">
 </head>
 <body>
-    <div class="header">
+    <header class="header">
         <img src="images/Logo-FreeJobID.png" alt="FreeJobID Logo" id="logo">
         <h1 id="title">FreeJobID - Privacy Policy & Legal Information</h1>
         <div class="language-select">
             <button onclick="setLanguage('en')">English</button>
             <button onclick="setLanguage('id')">Indonesia</button>
         </div>
-    </div>
+    </header>
     <div class="container">
         <div class="content">
             <div class="privacy-policy">
@@ -31,6 +31,7 @@
         <div class="footer-content">
             <p>&copy; 2024 FreeJobID. All rights reserved. Owned by <a href="https://arywibowo.id" target="_blank">Ary Wibowo</a>.</p>
             <p>Follow us on: <a href="https://www.linkedin.com/in/boworesearch/" target="_blank">LinkedIn</a></p>
+            <p>Contact us at: <a href="mailto:info@freejobid.com">info@freejobid.com</a></p>
         </div>
     </footer>
     <script>
