--- a/privacy.html
+++ b/privacy.html
@@ -13,7 +13,9 @@
 <body>
     <div class="container">
         <header class="header">
-            <img src="images/Logo-FreeJobID.png" alt="FreeJobID Logo" id="logo">
+            <a href="https://freejobid.arywibowo.id">
+                <img src="images/Logo-FreeJobID.png" alt="FreeJobID Logo" id="logo">
+            </a>
             <h1 id="title">FreeJobID - Privacy Policy & Legal Information</h1>
             <div class="language-select">
                 <button onclick="setLanguage('en')">English</button>
