--- a/apply.html
+++ b/apply.html
@@ -4,13 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apply For The Job - FreeJobID</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/apply-styles.css">
 </head>
 <body>
+    <div class="header">
+        <a href="https://freejobid.arywibowo.id">
+            <img src="images/Logo-FreeJobID.png" alt="FreeJobID Logo" id="logo">
+        </a>
+        <h1>FreeJobID - Apply For The Job</h1>
+    </div>
     <div class="container">
-        <h1>Isi Profil Anda</h1>
+        <h2>Isi Profil Anda</h2>
         <p>Silakan isi formulir di bawah ini untuk membuat profil Anda dan mengirimkan CV.</p>
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdZnRsyJQHOIRuGnlPkBOdWJa5ssQEWlowlE3Icffiz2FXtkA/viewform?embedded=true" width="640" height="2882" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <a href="https://freejobid.arywibowo.id" class="back-button">Back to Home</a>
     </div>
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2024 Ary Wibowo. All rights reserved.</p>
+            <p>Contact us at: <a href="mailto:info@freejobid.com">info@freejobid.com</a></p>
+            <p>Follow us on:
+                <a href="https://www.linkedin.com/in/boworesearch/" target="_blank">LinkedIn</a>
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
