--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <div class="job-openings">
                 <h2 data-en="JOB OPENINGS" data-id="LOWONGAN KERJA">JOB OPENINGS</h2>
                 <p data-en="Please review the job details listed in the table." data-id="Silakan tinjau detail pekerjaan yang terdaftar di tabel.">Please review the job details listed in the table.</p>
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQyDmwEoAhnUUvUPDuzeIe7o_fr9lz8Lwv_GqFAs48NXZjugfpTrP_nGgBviM3oBIGEKnGk9ukVe1Fr/pubhtml?gid=1954586439&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
                 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQyDmwEoAhnUUvUPDuzeIe7o_fr9lz8Lwv_GqFAs48NXZjugfpTrP_nGgBviM3oBIGEKnGk9ukVe1Fr/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
             </div>
             <div class="apply">
@@ -43,10 +44,10 @@
     </div>
     <footer>
         <div class="footer-content">
-            <p>&copy; 2024 FreeJobID. All rights reserved. Owned by <a href="https://arywibowo.id" target="_blank">Ary Wibowo</a>.</p>
-            <p>Follow us on: <a href="https://www.linkedin.com/in/boworesearch/" target="_blank">LinkedIn</a></p>
-            <p>Contact us at: <a href="mailto:info@freejobid.com">info@freejobid.com</a></p>
-            <p><a href="privacy.html">Privacy Policy & Legal Information</a></p>
+            <p>&copy; 2024 FreeJobID. All rights reserved. Website by <a href="https://arywibowo.id" target="_blank">Ary Wibowo</a></p>
+            <p>Follow us on:
+                <a href="https://www.linkedin.com/in/boworesearch/" target="_blank">LinkedIn</a>
+            </p>
         </div>
     </footer>
     <script>
