--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <div class="job-openings">
                 <h2 data-en="JOB OPENINGS" data-id="LOWONGAN KERJA">JOB OPENINGS</h2>
                 <p data-en="Please review the job details listed in the table." data-id="Silakan tinjau detail pekerjaan yang terdaftar di tabel.">Please review the job details listed in the table.</p>
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQyDmwEoAhnUUvUPDuzeIe7o_fr9lz8Lwv_GqFAs48NXZjugfpTrP_nGgBviM3oBIGEKnGk9ukVe1Fr/pubhtml?gid=1954586439&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQyDmwEoAhnUUvUPDuzeIe7o_fr9lz8Lwv_GqFAs48NXZjugfpTrP_nGgBviM3oBIGEKnGk9ukVe1Fr/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQyDmwEoAhnUUvUPDuzeIe7o_fr9lz8Lwv_GqFAs48NXZjugfpTrP_nGgBviM3oBIGEKnGk9ukVe1Fr/pubhtml?gid=1954586439&amp;single=true&amp;widget=true&amp;headers=false" width="100%" height="600" frameborder="0"></iframe>
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQyDmwEoAhnUUvUPDuzeIe7o_fr9lz8Lwv_GqFAs48NXZjugfpTrP_nGgBviM3oBIGEKnGk9ukVe1Fr/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" width="100%" height="600" frameborder="0"></iframe>
             </div>
             <div class="apply">
                 <p data-en="To apply, please click the button below." data-id="Untuk melamar, silakan klik tombol di bawah ini.">To apply, please click the button below.</p>
