--- a/index.html
+++ b/index.html
@@ -23,22 +23,18 @@
     <div class="header">
         <img src="images/Logo-FreeJobID.png" alt="FreeJobID Logo" id="logo">
         <h1 id="title">FreeJobID - Employment Opportunities for All, Anywhere, Anytime</h1>
-        <div class="language-select">
-            <button onclick="setLanguage('en')">English</button>
-            <button onclick="setLanguage('id')">Indonesia</button>
-        </div>
     </div>
     <div class="container">
         <div class="content">
             <div class="job-openings">
-                <h2 data-en="JOB OPENINGS" data-id="LOWONGAN KERJA">JOB OPENINGS</h2>
-                <p data-en="Please review the job details listed in the table." data-id="Silakan tinjau detail pekerjaan yang terdaftar di tabel.">Please review the job details listed in the table.</p>
+                <h2>JOB OPENINGS</h2>
+                <p>Please review the job details listed in the table.</p>
                 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQyDmwEoAhnUUvUPDuzeIe7o_fr9lz8Lwv_GqFAs48NXZjugfpTrP_nGgBviM3oBIGEKnGk9ukVe1Fr/pubhtml?gid=1954586439&amp;single=true&amp;widget=true&amp;headers=false" width="100%" height="600" frameborder="0"></iframe>
                 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQyDmwEoAhnUUvUPDuzeIe7o_fr9lz8Lwv_GqFAs48NXZjugfpTrP_nGgBviM3oBIGEKnGk9ukVe1Fr/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" width="100%" height="600" frameborder="0"></iframe>
             </div>
             <div class="apply">
-                <p data-en="To apply, please click the button below." data-id="Untuk melamar, silakan klik tombol di bawah ini.">To apply, please click the button below.</p>
-                <a href="https://freejobid.arywibowo.id/apply" class="apply-button" data-en="Apply Now" data-id="Apply Sekarang">Apply Now</a>
+                <p>To apply, please click the button below.</p>
+                <a href="https://freejobid.arywibowo.id/apply" class="apply-button">Apply Now</a>
             </div>
         </div>
     </div>
@@ -50,17 +46,5 @@
             </p>
         </div>
     </footer>
-    <script>
-        function setLanguage(language) {
-            var elements = document.querySelectorAll('[data-en]');
-            elements.forEach(function (element) {
-                if (language === 'en') {
-                    element.textContent = element.getAttribute('data-en');
-                } else if (language === 'id') {
-                    element.textContent = element.getAttribute('data-id');
-                }
-            });
-        }
-    </script>
 </body>
 </html>
