--- a/index.html
+++ b/index.html
@@ -18,10 +18,53 @@
 
         gtag('config', 'G-ZMHZWN4DWD');
     </script>
+    <style>
+        .header {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background-color: #fff;
+            z-index: 1000;
+            padding: 10px 0;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        .container {
+            margin-top: 100px;
+        }
+
+        .apply-button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #2980b9;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .apply-button:hover {
+            background-color: #3498db;
+        }
+
+        .footer-content {
+            text-align: center;
+            padding: 20px;
+            background-color: #f4f4f4;
+            margin-top: 20px;
+        }
+
+        .footer-content p {
+            margin: 5px 0;
+        }
+    </style>
 </head>
 <body>
     <div class="header">
-        <img src="images/Logo-FreeJobID.png" alt="FreeJobID Logo" id="logo">
+        <a href="https://freejobid.arywibowo.id">
+            <img src="images/Logo-FreeJobID.png" alt="FreeJobID Logo" id="logo">
+        </a>
         <h1 id="title">FreeJobID - Employment Opportunities for All, Anywhere, Anytime</h1>
     </div>
     <div class="container">
