--- a/index.html
+++ b/index.html
@@ -50,13 +50,24 @@
 
         .footer-content {
             text-align: center;
-            padding: 20px;
+            padding: 10px 20px;
             background-color: #f4f4f4;
             margin-top: 20px;
+            font-size: 0.9em;
+            color: #555;
         }
 
         .footer-content p {
             margin: 5px 0;
+        }
+
+        .footer-content a {
+            color: #2980b9;
+            text-decoration: none;
+        }
+
+        .footer-content a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
