--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="job-openings">
                 <h2>JOB OPENINGS</h2>
                 <p>Please review the job details listed in the table.</p>
-                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQyDmwEoAhnUUvUPDuzeIe7o_fr9lz8Lwv_GqFAs48NXZjugfpTrP_nGgBviM3oBIGEKnGk9ukVe1Fr/pubhtml?gid=1954586439&amp;single=true&amp;widget=true&amp;headers=false" width="100%" height="600" frameborder="0"></iframe>
+                <iframe width="600" height="450" src="https://lookerstudio.google.com/embed/reporting/7216edd0-b9b1-4c17-a402-3ebd1a42aaa6/page/4AM5D" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
                 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQyDmwEoAhnUUvUPDuzeIe7o_fr9lz8Lwv_GqFAs48NXZjugfpTrP_nGgBviM3oBIGEKnGk9ukVe1Fr/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" width="100%" height="600" frameborder="0"></iframe>
             </div>
             <div class="apply">
@@ -97,6 +97,9 @@
             <p>&copy; 2024 FreeJobID. All rights reserved. Website by <a href="https://arywibowo.id" target="_blank">Ary Wibowo</a></p>
             <p>Follow us on:
                 <a href="https://www.linkedin.com/in/boworesearch/" target="_blank">LinkedIn</a>
+            </p>
+            <p>Privacy & Legal Policy :
+                <a href="https://freejobid.arywibowo.id/privacy" target="_blank">click here</a>
             </p>
         </div>
     </footer>
