--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
             position: fixed;
             top: 0;
             width: 100%;
-            background-color: #fff;
+            background-color: #2980b9;
+            color: #fff;
             z-index: 1000;
             padding: 10px 0;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             text-align: center;
+            font-size: 1.2em;
+            font-weight: bold;
         }
 
         .container {
-            margin-top: 100px;
+            margin-top: 60px;
         }
 
         .apply-button {
@@ -69,17 +71,33 @@
         .footer-content a:hover {
             text-decoration: underline;
         }
+
+        .quote {
+            margin: 20px 0;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            background-color: #f9f9f9;
+            font-style: italic;
+            text-align: center;
+        }
+
+        .quote p {
+            margin: 0;
+            font-size: 1.1em;
+            color: #333;
+        }
     </style>
 </head>
 <body>
     <div class="header">
-        <a href="https://freejobid.arywibowo.id">
-            <img src="images/Logo-FreeJobID.png" alt="FreeJobID Logo" id="logo">
-        </a>
-        <h1 id="title">FreeJobID - Employment Opportunities for All, Anywhere, Anytime</h1>
+        FreeJobID - Employment Opportunities for All, Anywhere, Anytime
     </div>
     <div class="container">
         <div class="content">
+            <div class="quote">
+                <p>"The future depends on what you do today. Stay motivated and keep pushing forward."</p>
+            </div>
             <div class="job-openings">
                 <h2>JOB OPENINGS</h2>
                 <p>Please review the job details listed in the table.</p>
