--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         gtag('config', 'G-ZMHZWN4DWD');
     </script>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+
         .header {
             position: fixed;
             top: 0;
@@ -26,14 +30,16 @@
             background-color: #2980b9;
             color: #fff;
             z-index: 1000;
-            padding: 10px 0;
+            padding: 20px 0;
             text-align: center;
-            font-size: 1.2em;
+            font-size: 1.5em;
             font-weight: bold;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
 
         .container {
-            margin-top: 60px;
+            margin-top: 80px;
+            padding: 20px;
         }
 
         .apply-button {
@@ -91,7 +97,8 @@
 </head>
 <body>
     <div class="header">
-        FreeJobID - Employment Opportunities for All, Anywhere, Anytime
+        FreeJobID
+        <div style="font-size: 0.8em; margin-top: 5px;">Employment Opportunities for All, Anywhere, Anytime</div>
     </div>
     <div class="container">
         <div class="content">
@@ -101,7 +108,7 @@
             <div class="job-openings">
                 <h2>JOB OPENINGS</h2>
                 <p>Please review the job details listed in the table.</p>
-                <iframe width="600" height="50%" src="https://lookerstudio.google.com/embed/reporting/7216edd0-b9b1-4c17-a402-3ebd1a42aaa6/page/4AM5D" frameborder="0" style="border:0" allowfullscreen sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox"></iframe>
+                <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQyDmwEoAhnUUvUPDuzeIe7o_fr9lz8Lwv_GqFAs48NXZjugfpTrP_nGgBviM3oBIGEKnGk9ukVe1Fr/pubhtml?gid=1954586439&amp;single=true&amp;widget=true&amp;headers=false" width="100%" height="150" frameborder="0"></iframe>
                 <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQyDmwEoAhnUUvUPDuzeIe7o_fr9lz8Lwv_GqFAs48NXZjugfpTrP_nGgBviM3oBIGEKnGk9ukVe1Fr/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" width="100%" height="600" frameborder="0"></iframe>
             </div>
             <div class="apply">
