--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
             <div class="apply">
                 <p>To apply, please click the button below.</p>
-                <a href="https://freejobid.arywibowo.id/apply" class="apply-button">Apply Now</a>
+                <a href="https://forms.gle/73S6xnudHmbnmGU49" class="apply-button">Apply Now</a>
             </div>
         </div>
     </div>
