--- a/jobs/acquisition-processing-admin.html
+++ b/jobs/acquisition-processing-admin.html
@@ -51,7 +51,7 @@
                 <li>Melakukan input sistem dan pemeriksaan kualitas atas order polis new, renewal dan sesuai dengan prosedur yang ditetapkan</li>
                 <li>Memonitor approval order sampai terbentuk polis</li>
             </ul>
-            <p>Kirim CV atau portofolio melalui <a href="https://imheroeskiller.github.io/FreeJobID/apply">link ini</a>.</p>
+            <p>Kirim CV atau portofolio melalui <a href="https://forms.gle/73S6xnudHmbnmGU49">link ini</a>.</p>
             <img src="https://imheroeskiller.github.io/FreeJobID/jobs/images/GOS.png" alt="We are hiring" width="200">
         </div>
         <div id="content-en" style="display:none;">
@@ -76,7 +76,7 @@
                 <li>Perform system input and quality checks on new, renewal policy orders in accordance with established procedures</li>
                 <li>Monitor order approval until policy is issued</li>
             </ul>
-            <p>Send your CV or portfolio to <a href="https://imheroeskiller.github.io/FreeJobID/apply">this link</a>.</p>
+            <p>Send your CV or portfolio to <a href="https://forms.gle/73S6xnudHmbnmGU49">this link</a>.</p>
             <img src="https://imheroeskiller.github.io/FreeJobID/jobs/images/GOS.png" alt="We are hiring" width="200">
         </div>
         <a href="https://imheroeskiller.github.io/FreeJobID" class="back-button">Back to Home</a>
