--- a/jobs/building-maintenance.html
+++ b/jobs/building-maintenance.html
@@ -50,7 +50,7 @@
                 <li>Selalu standby untuk perbaikan-perbaikan mechanical electrical.</li>
                 <li>Melakukan perbaikan-perbaikan di cabang-cabang Auto2000.</li>
             </ul>
-            <p>Kirim CV atau portofolio melalui <a href="https://imheroeskiller.github.io/FreeJobID/apply">link ini</a>.</p>
+            <p>Kirim CV atau portofolio melalui <a href="https://forms.gle/73S6xnudHmbnmGU49">link ini</a>.</p>
             <img src="https://imheroeskiller.github.io/FreeJobID/jobs/images/GOS.png" alt="We are hiring" width="200">
         </div>
         <div id="content-en" style="display:none;">
@@ -74,7 +74,7 @@
                 <li>Always on standby for mechanical and electrical repairs.</li>
                 <li>Perform repairs at Auto2000 branches.</li>
             </ul>
-            <p>Send your CV or portfolio to <a href="https://imheroeskiller.github.io/FreeJobID/apply">this link</a>.</p>
+            <p>Send your CV or portfolio to <a href="https://forms.gle/73S6xnudHmbnmGU49">this link</a>.</p>
             <img src="https://imheroeskiller.github.io/FreeJobID/jobs/images/GOS.png" alt="We are hiring" width="200">
         </div>
         <a href="https://imheroeskiller.github.io/FreeJobID" class="back-button">Back to Home</a>
