--- a/jobs/customer-service-officer.html
+++ b/jobs/customer-service-officer.html
@@ -51,7 +51,7 @@
                 <li>Menerima dan menyelesaikan keluhan pelanggan sesuai dengan standar yang ditetapkan</li>
                 <li>Memberikan informasi terhadap segala hal yang berkaitan dengan produk dan program promosi yang sedang berjalan, status polis, premi, serta survey kepada pelanggan</li>
             </ul>
-            <p>Kirim CV atau portofolio melalui <a href="https://imheroeskiller.github.io/FreeJobID/apply">link ini</a>.</p>
+            <p>Kirim CV atau portofolio melalui <a href="https://forms.gle/73S6xnudHmbnmGU49">link ini</a>.</p>
             <img src="https://imheroeskiller.github.io/FreeJobID/jobs/images/GOS.png" alt="We are hiring" width="200">
         </div>
         <div id="content-en" style="display:none;">
@@ -76,7 +76,7 @@
                 <li>Receive and resolve customer complaints in accordance with established standards</li>
                 <li>Provide information on all matters related to products and promotional programs in progress, policy status, premiums, and surveys to customers</li>
             </ul>
-            <p>Send your CV or portfolio to <a href="https://imheroeskiller.github.io/FreeJobID/apply">this link</a>.</p>
+            <p>Send your CV or portfolio to <a href="https://forms.gle/73S6xnudHmbnmGU49">this link</a>.</p>
             <img src="https://imheroeskiller.github.io/FreeJobID/jobs/images/GOS.png" alt="We are hiring" width="200">
         </div>
         <a href="https://imheroeskiller.github.io/FreeJobID" class="back-button">Back to Home</a>
