--- a/jobs/operator-telepon.html
+++ b/jobs/operator-telepon.html
@@ -50,7 +50,7 @@
                 <li>Menyediakan informasi umum tentang perusahaan, produk, atau layanan kepada penelepon.</li>
                 <li>Menjaga catatan panggilan, pesan, dan informasi penting lainnya dengan rapi dan akurat.</li>
             </ul>
-            <p>Kirim CV atau portofolio melalui <a href="https://imheroeskiller.github.io/FreeJobID/apply">link ini</a>.</p>
+            <p>Kirim CV atau portofolio melalui <a href="https://forms.gle/73S6xnudHmbnmGU49">link ini</a>.</p>
             <img src="https://imheroeskiller.github.io/FreeJobID/jobs/images/GOS.png" alt="We are hiring" width="200">
         </div>
         <div id="content-en" style="display:none;">
@@ -74,7 +74,7 @@
                 <li>Provide general information about the company, products, or services to callers.</li>
                 <li>Maintain call records, messages, and other important information neatly and accurately.</li>
             </ul>
-            <p>Send your CV or portfolio to <a href="https://imheroeskiller.github.io/FreeJobID/apply">this link</a>.</p>
+            <p>Send your CV or portfolio to <a href="https://forms.gle/73S6xnudHmbnmGU49">this link</a>.</p>
             <img src="https://imheroeskiller.github.io/FreeJobID/jobs/images/GOS.png" alt="We are hiring" width="200">
         </div>
         <a href="https://imheroeskiller.github.io/FreeJobID" class="back-button">Back to Home</a>
