--- a/jobs/project-coordinator.html
+++ b/jobs/project-coordinator.html
@@ -53,7 +53,7 @@
                 <li>Membantu komunikasi dengan Client dan Karyawan TAD serta bekerja sama dengan team Internal HO</li>
                 <li>Koordinasi data dengan PIC area serta User Client</li>
             </ul>
-            <p>Kirim CV atau portofolio melalui <a href="https://imheroeskiller.github.io/FreeJobID/apply">link ini</a>.</p>
+            <p>Kirim CV atau portofolio melalui <a href="https://forms.gle/73S6xnudHmbnmGU49">link ini</a>.</p>
             <img src="https://imheroeskiller.github.io/FreeJobID/jobs/images/GOS.png" alt="We are hiring" width="200">
         </div>
         <div id="content-en" style="display:none;">
@@ -80,7 +80,7 @@
                 <li>Assist communication with Clients and TAD Employees and work with the Internal HO team</li>
                 <li>Coordinate data with PIC area and User Client</li>
             </ul>
-            <p>Send your CV or portfolio to <a href="https://imheroeskiller.github.io/FreeJobID/apply">this link</a>.</p>
+            <p>Send your CV or portfolio to <a href="https://forms.gle/73S6xnudHmbnmGU49">this link</a>.</p>
             <img src="https://imheroeskiller.github.io/FreeJobID/jobs/images/GOS.png" alt="We are hiring" width="200">
         </div>
         <a href="https://imheroeskiller.github.io/FreeJobID" class="back-button">Back to Home</a>
