--- a/jobs/workshop-management-admin.html
+++ b/jobs/workshop-management-admin.html
@@ -53,7 +53,7 @@
                 <li>Membuat laporan bulanan mengenai performa bengkel, yang akan digunakan sebagai informasi pendukung dalam proses evaluasi performa bengkel</li>
                 <li>Memastikan pelayanan bengkel sesuai dengan standar yang ditetapkan oleh perusahaan</li>
             </ul>
-            <p>Kirim CV atau portofolio melalui <a href="https://imheroeskiller.github.io/FreeJobID/apply">link ini</a>.</p>
+            <p>Kirim CV atau portofolio melalui <a href="https://forms.gle/73S6xnudHmbnmGU49">link ini</a>.</p>
             <img src="https://imheroeskiller.github.io/FreeJobID/jobs/images/GOS.png" alt="We are hiring" width="200">
         </div>
         <div id="content-en" style="display:none;">
@@ -80,7 +80,7 @@
                 <li>Make a monthly report on workshop performance, which will be used as supporting information in the workshop performance evaluation process</li>
                 <li>Ensure workshop services are in accordance with the standards set by the company</li>
             </ul>
-            <p>Send your CV or portfolio to <a href="https://imheroeskiller.github.io/FreeJobID/apply">this link</a>.</p>
+            <p>Send your CV or portfolio to <a href="https://forms.gle/73S6xnudHmbnmGU49">this link</a>.</p>
             <img src="https://imheroeskiller.github.io/FreeJobID/jobs/images/GOS.png" alt="We are hiring" width="200">
         </div>
         <a href="https://imheroeskiller.github.io/FreeJobID" class="back-button">Back to Home</a>
